# msync

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bunfig.toml  components.d.ts  index.html  package.json  vite.config.ts
.github/workflows/: deploy.yml  integrate.yml  release.yml
.husky/: pre-commit
src/: App.vue  cli.ts  index.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/core/: overlay.rs  utils.rs
src/components/: MediaFlimstrip.vue  NumericInput.vue
src/components/Overlay/: OverlaySidePanel.vue
src/composables/: useWatermarkProgress.ts
src/layouts/: ToolLayout.vue
src/lib/: sync.ts
src/pages/: index.vue  overlay.vue  stream.vue  sync.vue
src/types/: index.ts
src/utils/: add-watermark-image.ts  add-watermark-video.ts  index.ts
test/: index.test.ts
