[package]
name = "msync"
description = "A background media service that streams and mirrors assets between MMedia and MDrive, with automated folder-based reorganization and bulk watermark/logo stamping at scale"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "MIT"
repository = "https://github.com/Modest-Human-Brands/msync.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-ffmpeg = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.10"
walkdir = "2.5.0"
tauri-plugin-fs = "2"
kamadak-exif = "0.6.1"
rayon = "1.11.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
